Add licence and update params with v3, minor modifications of the code due to the fact that cycle time can vary from on configuration to an other

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,7 +1,7 @@
-Changelog for swotsimulator
+Changelog for skimsimulator
 ===========================
 
 1.0 beta 1
 ----------
-2017/03/15 
-
+2017/05/15
+First beta version, undocumented
