WIP, Wd inversion code is running but uwd_est is inverted

--- a/test/plot_L2B.ipynb
+++ b/test/plot_L2B.ipynb
@@ -17,14 +17,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "odict_keys(['time', 'time_nadir', 'lon', 'lon_nadir', 'lat', 'lat_nadir', 'instr_nadir', 'instr', 'uwb_corr', 'ice', 'ur_obs', 'rain', 'uwb', 'ssh', 'ucur', 'vuss', 'mssd', 'mssxy', 'vindice_nadir', 'vindice', 'vcur', 'ur_true', 'mssy', 'radial_angle', 'mssx', 'vwnd', 'ssh_obs_nadir', 'ssh_true_nadir', 'uuss', 'sigma0', 'uwnd'])\n"
+      "odict_keys(['time', 'time_nadir', 'lon', 'lon_nadir', 'lat', 'lat_nadir', 'ssh_obs_nadir', 'ur_true', 'instr_nadir', 'instr', 'radial_angle', 'vwnd', 'uwb', 'ssh_true_nadir', 'uwb_noerr', 'vindice_nadir', 'vindice', 'ur_obs', 'sigma0', 'mssxy', 'mssc', 'mssu', 'ur_uss', 'ucur', 'vcur', 'uuss', 'vuss', 'ice', 'mssd', 'mssx', 'mssy', 'ssh', 'hs', 'uwnd', 'rain', 'yaw', 'yaw_aocs', 'yaw_ted', 'uwb_corr'])\n"
      ]
     }
    ],
@@ -40,8 +40,9 @@
     "#var1 = data['ucur'][:]\n",
     "#var2 = data['vcur'][:]\n",
     "#var = numpy.sqrt(var1**2 + var2**2)\n",
-    "var = data['uwb_corr'][:]\n",
-    "\n",
+    "var = data['yaw'][:]\n",
+    "var1 = data['yaw_aocs'][:]\n",
+    "var2 = data['yaw_ted'][:]\n",
     "#x_ac = data['x_ac'][:]\n",
     "#x_al = data['x_al'][:]\n",
     "modelbox = (numpy.min(lon), numpy.max(lon), numpy.min(lat), numpy.max(lat))\n",
