update changelog and documentation

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,7 +1,30 @@
 Changelog for skimulator
 ===========================
 
+3.0
+---
+2019/07/10
+- Handle ice and ocean areas separately
 
+2.9
+---
+2019/06/14
+
+2.8
+---
+2019/05/15
+
+2.7
+---
+2019/04/31
+
+2.6
+---
+2019/03/31
+
+2.5
+---
+2019/02/28
 
 2.4
 ---
